--- a/kiemel.css
+++ b/kiemel.css
@@ -1,8 +1,18 @@
 main,aside,article,footer,header{
+    
     border: 2pt solid red;
 
 }
 
 .img {
+
     cursor: -webkit-grab; cursor: grab;
+
+}
+
+p, h1{
+
+    text-align: center;
+    font-size: 21px;
+
 }
